force-app/main/default/objects/Checklist_Master__c/Checklist_Master__c.object-meta.xml
<CustomObject>
    <label>Checklist Master</label>
    <nameField>
        <displayFormat>CM - {0000}</displayFormat>
        <label>Checklist Master No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>