force-app/main/default/objects/Checklist_Master__c/fields/X_days_before_Joining_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>X_days_before_Joining_Exit_Date__c</fullName>
    <label>X days before Joining/Exit Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>