force-app/main/default/objects/Checklist_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity_Name__c</columns>
    <columns>X_days_before_Joining_Exit_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>